Added auto-docstring extension in dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
 				"ms-toolsai.vscode-jupyter-slideshow",
 				"ms-python.vscode-pylance",
 				"charliermarsh.ruff",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"njpwerner.autodocstring"
 			]
 		}
 	}
